syntax = "proto3";
package adcontrol.protos;
option csharp_namespace = "AdControl.Protos";

enum ItemType {
  IMAGE = 0;
  VIDEO = 1;
  TABLE = 2;
  INLINE_JSON = 3;
}

message Screen {
  string id = 1;
  string userId = 2;
  string name = 3;
  string resolution = 4;
  string location = 5;
  int64 lastHeartbeatAt = 6;
  int64 pairedAt = 7;
  int64 createdAt = 8;
  int64 updatedAt = 9;
}

message ConfigItem {
  string id = 1;
  string configId = 2;
  ItemType type = 3;
  string url = 4;
  string inlineData = 5;
  string checksum = 6;
  int64 size = 7;
  int32 durationSeconds = 8;
  int32 order = 9;
}

message Config {
  string id = 1;
  string userId = 2;
  int64 createdAt = 3;
  repeated ConfigItem items = 4;
  int64 version = 5;
  string name = 6;
}

message ScreenConfig {
  string id = 1;
  string screenId = 2;
  string configId = 3;
  bool isActive = 4;
  int64 assignedAt = 5;
}

/* Screen Requests / Responses */
message CreateScreenRequest { string name = 1; string resolution = 2; string location = 3; }
message CreateScreenResponse { string id = 1; string status = 2; string error = 3; }
message DeleteScreenRequest { string id = 1; }
message DeleteScreenResponse { string status = 1; string error = 2; }
message GetScreenRequest { string id = 1; }
message GetScreenResponse { Screen screen = 1; repeated string type = 2;}
message ListScreensRequest { string filterName = 1; int32 limit = 2; int32 offset = 3; }
message ListScreensResponse { repeated Screen screens = 1; int32 total = 2; }
message ListUserScreensRequest { string userId = 1; }
message ListUserScreensResponse {repeated Screen screens = 1; int32 total = 2;}
message UpdateScreenFieldsRequest{ string id = 1; string name = 2; string resolution = 3; string location = 4;}
message UpdateScreenFieldsResponse{ Screen screen = 1;}

/* Config requests */
message CreateConfigRequest {
  repeated ConfigItem items = 1;
  string Name = 2;
}
message CreateConfigResponse { string id = 1; string status = 2; string error = 3; }
message GetConfigRequest { string id = 1; string name = 2;}
message GetConfigResponse { Config config = 1; }
message GetConfigsRequest { }
message GetConfigsResponse { repeated Config configs = 1; }
message AssignConfigRequest { string screenId = 1; string configId = 2; bool isActive = 3; }
message AssignConfigResponse { string id = 1; string status = 2; string error = 3; }
message AddItemsRequest{string id = 1; repeated ConfigItem items = 2; }
message AddItemsResponse{Config config = 1;}
message RemoveItemRequest{string id = 1; string itemId = 2;}
message RemoveItemResponse{bool success = 1;}

/* Service */
service ScreenService {
  rpc CreateScreen(CreateScreenRequest) returns (CreateScreenResponse);
  rpc DeleteScreen(DeleteScreenRequest) returns (DeleteScreenResponse);
  rpc GetScreen(GetScreenRequest) returns (GetScreenResponse);
  rpc ListScreens(ListScreensRequest) returns (ListScreensResponse);
  rpc CreateConfig(CreateConfigRequest) returns (CreateConfigResponse);
  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);
  rpc GetConfigs(GetConfigsRequest) returns (GetConfigsResponse);
  rpc AssignConfigToScreen(AssignConfigRequest) returns (AssignConfigResponse);
  rpc GetListUserScreens(ListUserScreensRequest) returns (ListUserScreensResponse);
  rpc AddConfigItems(AddItemsRequest) returns (AddItemsResponse);
  rpc RemoveConfigItem(RemoveItemRequest) returns (RemoveItemResponse);
  rpc UpdateScreenFields(UpdateScreenFieldsRequest) returns (UpdateScreenFieldsResponse);
}
